--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/cloudinary": "^1.0.3",
     "core-js": "^3.15.1",
+    "highlight.js": "^11.1.0",
+    "markdown-it": "^12.1.0",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
