--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/cloudinary": "^1.0.3",
     "core-js": "^3.15.1",
+    "date-fns": "^2.23.0",
     "nuxt": "^2.15.7",
     "vue-observe-visibility": "^1.0.0"
   },
@@ -24,7 +25,7 @@
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
     "fibers": "^5.0.0",
-    "sass": "^1.35.2",
+    "sass": "^1.36.0",
     "sass-loader": "^10.1.1"
   }
 }
