--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   },
   "dependencies": {
     "@nuxt/content": "^1.14.0",
+    "@nuxtjs/auth-next": "^5.0.0-1624817847.21691f1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/cloudinary": "^1.0.3",
+    "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.15.1",
     "date-fns": "^2.23.0",
     "nuxt": "^2.15.7",
     "vue-observe-visibility": "^1.0.0"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^2.0.10",
     "@nuxtjs/tailwindcss": "^4.2.0",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.3",
