--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/cloudinary": "^1.0.3",
     "@nuxtjs/toast": "^3.3.1",
+    "codemirror": "^5.62.3",
     "core-js": "^3.15.1",
     "date-fns": "^2.23.0",
     "nuxt": "^2.15.7",
-    "vue-observe-visibility": "^1.0.0"
+    "vue-observe-visibility": "^1.0.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^2.0.10",
