--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "core-js": "^3.15.1",
     "date-fns": "^2.23.0",
     "nuxt": "^2.15.7",
+    "vue-multiselect": "^2.1.6",
     "vue-observe-visibility": "^1.0.0",
     "yup": "^0.32.9"
   },
