--- a/package.json
+++ b/package.json
@@ -16,10 +16,17 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/cloudinary": "^1.0.3",
     "@nuxtjs/toast": "^3.3.1",
+    "@snackbar/core": "^1.7.0",
     "codemirror": "^5.62.3",
     "core-js": "^3.15.1",
     "date-fns": "^2.23.0",
-    "nuxt": "^2.15.7",
+    "dayjs": "^1.10.7",
+    "filepond": "^4.29.1",
+    "filepond-plugin-file-validate-type": "^1.2.6",
+    "filepond-plugin-image-preview": "^4.6.10",
+    "lodash.debounce": "^4.0.8",
+    "nuxt": "^2.15.8",
+    "vue-filepond": "^6.0.3",
     "vue-multiselect": "^2.1.6",
     "vue-observe-visibility": "^1.0.0",
     "yup": "^0.32.9"
@@ -29,6 +36,7 @@
     "@nuxtjs/tailwindcss": "^4.2.0",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/line-clamp": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "fibers": "^5.0.0",
     "sass": "^1.36.0",
