--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/cloudinary": "^1.0.3",
     "@nuxtjs/toast": "^3.3.1",
     "@snackbar/core": "^1.7.0",
+    "bnnum": "^1.0.6",
     "codemirror": "^5.62.3",
     "core-js": "^3.15.1",
     "date-fns": "^2.23.0",
