--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/auth-next": "^5.0.0-1624817847.21691f1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/cloudinary": "^1.0.3",
+    "@nuxtjs/dayjs": "^1.4.0",
     "@nuxtjs/toast": "^3.3.1",
     "@snackbar/core": "^1.7.0",
     "bnnum": "^1.0.6",
