--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash.debounce": "^4.0.8",
     "nuxt": "^2.15.8",
     "sweetalert": "^2.1.2",
+    "vue-codemirror": "^4.0.6",
     "vue-multiselect": "^2.1.6",
     "vue-observe-visibility": "^1.0.0",
     "yup": "^0.32.9"
