--- a/package.json
+++ b/package.json
@@ -17,19 +17,17 @@
     "@nuxtjs/cloudinary": "^1.0.3",
     "@nuxtjs/dayjs": "^1.4.0",
     "@nuxtjs/toast": "^3.3.1",
-    "@snackbar/core": "^1.7.0",
     "bnnum": "^1.0.6",
     "codemirror": "^5.62.3",
     "core-js": "^3.15.1",
     "dayjs": "^1.10.7",
-    "filepond-plugin-file-validate-type": "^1.2.6",
-    "filepond-plugin-image-preview": "^4.6.10",
     "lodash.debounce": "^4.0.8",
     "nuxt": "^2.15.8",
     "sweetalert": "^2.1.2",
-    "vue-codemirror": "^4.0.6",
+    "vue-input-autowidth": "^1.0.11",
     "vue-multiselect": "^2.1.6",
     "vue-observe-visibility": "^1.0.0",
+    "vue-textarea-autosize": "^1.1.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
