--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "td-client-beta",
+  "name": "techdiary-client",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -31,14 +31,18 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/color-mode": "^2.0.10",
-    "@nuxtjs/tailwindcss": "^4.2.0",
-    "@tailwindcss/aspect-ratio": "^0.2.1",
-    "@tailwindcss/forms": "^0.3.3",
-    "@tailwindcss/line-clamp": "^0.2.1",
-    "@tailwindcss/typography": "^0.4.1",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^10.4.2",
+    "fiber": "^1.0.4",
     "fibers": "^5.0.0",
+    "postcss": "^8.4.5",
     "sass": "^1.36.0",
-    "sass-loader": "^10.1.1"
+    "sass-loader": "^10.1.1",
+    "tailwindcss": "^3.0.13"
   }
 }
