--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "autoprefixer": "^10.4.2",
     "fibers": "^5.0.0",
     "postcss": "^8.4.5",
+    "prettier": "2.5.1",
     "sass": "^1.36.0",
     "sass-loader": "^10.1.1",
     "tailwindcss": "^3.0.13"
