--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "highlight.js": "^11.4.0",
     "lodash.debounce": "^4.0.8",
     "nuxt": "^2.15.8",
+    "nuxt-seo-meta": "^2.3.1",
     "sweetalert": "^2.1.2",
     "vue-input-autowidth": "^1.0.11",
     "vue-multiselect": "^2.1.6",
