--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NUXT_ENV_BASE_URL=http://techdiary.test:3000
 NUXT_ENV_API_URL=http://api.techdiary.test
 NUXT_APP_CLOUDINARY_CLOUDNAME=kingrayhan
 NUXT_ENV_HOST=techdiary.test
+NUXT_APP_GOOGLE_ANALYTICS_ID=UA-1209849-1
