--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/color-mode": "^2.1.1",
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.1",
