--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ NUXT_ENV_API_URL=http://api.techdiary.test
 NUXT_APP_CLOUDINARY_CLOUDNAME=kingrayhan
 NUXT_ENV_HOST=techdiary.test
 NUXT_APP_GOOGLE_ANALYTICS_ID=UA-1209849-1
+NUXT_ENV_ALGOLIA_APP_ID=IA88PX3T8O
+NUXT_ENV_ALGOLIA_API_KEY=898cb2ef32ee94ecbe0f7f7ef60320e9
