--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "dayjs": "^1.10.7",
     "highlight.js": "^11.4.0",
     "lodash.debounce": "^4.0.8",
+    "mavon-editor": "^2.10.4",
     "nuxt": "^2.15.8",
     "nuxt-seo-meta": "^2.3.1",
     "sweetalert": "^2.1.2",
     "vue-input-autowidth": "^1.0.11",
     "vue-multiselect": "^2.1.6",
     "vue-observe-visibility": "^1.0.0",
-    "vue-textarea-autosize": "^1.1.1",
     "vue-tour": "^2.0.0",
     "yup": "^0.32.9"
   },
