--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "techdiary-client",
   "version": "1.0.0",
   "private": true,
+    "engines": {
+    "node": ">=16.0.0 <17.0.0"
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
